--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.23.1",
         "vue-sweetalert2": "^5.0.5"
     }
 }
